--- a/css/estilos.css
+++ b/css/estilos.css
@@ -9,7 +9,6 @@ div.header li {
   list-style: none;
   display: inline-block;
   margin: 40px;
-  border-radius: 20px;
 }
 body {
   background-color: rgb(24, 24, 24);
@@ -30,7 +29,7 @@ div.header {
 }
 div.footer li {
   display: inline-block;
-  margin: 20px;
+  margin: 10px;
 }
 
 .footer {
@@ -40,18 +39,27 @@ div.footer li {
   position: fixed;
   padding: 10px;
 }
-.nombre {
+h1 {
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   margin-left: 10px;
 }
+h2 {
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  margin-left: 10px;
+  color: rgb(66, 84, 185);
+}
+
 .nier {
-  width: 350px;
+  width: 250px;
+  padding-left: 60px;
 }
 .gow {
-  width: 350px;
+  width: 233px;
+  padding-left: 43px;
 }
 .ac {
-  width: 350px;
+  width: 233px;
+  padding-left: 40px;
 }
 .twt {
   width: 80px;
@@ -81,6 +89,8 @@ div.footer li {
 }
 .links {
   text-decoration: none;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  font-size: larger;
 }
 .links:hover {
   text-decoration: underline;
@@ -92,7 +102,6 @@ div.footer li {
 }
 .lista1 {
   margin-left: 15px;
-  margin-top: 10pxx;
 }
 .lista2 {
   margin-left: 15px;
@@ -104,4 +113,77 @@ div.footer li {
 }
 .lista1 li {
   list-style: none;
+}
+.formulario {
+  padding-top: 30px;
+  margin-left: 40px;
+  color: silver;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+legend {
+  color: azure;
+}
+.curriculum {
+  color: silver;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+}
+.curriculum h1 {
+  color: rgb(66, 84, 185);
+  text-decoration: solid;
+}
+h4 {
+  margin-bottom: 10px;
+  margin-left: 10px;
+}
+.textarea {
+  text-align: center;
+  margin-top: 20px;
+}
+.nmbr {
+  margin-left: 110px;
+}
+.papellido {
+  margin-left: 58px;
+}
+.sapellido {
+  margin-left: 41px;
+}
+.correo {
+  margin-left: 33px;
+}
+.tlf {
+  margin-left: 22px;
+}
+.fecha {
+  margin-top: 20px;
+}
+.direccion {
+  margin-left: 98px;
+}
+.empresa {
+  margin-left: 2px;
+  margin-top: 20px;
+}
+.enviar {
+  margin-top: 20px;
+  margin-bottom: 10px;
+}
+.reset {
+  margin-left: 80px;
+  margin-bottom: 10px;
+}
+.cp {
+  margin-top: 20px;
+  margin-left: 65px;
+}
+.radio {
+  margin-top: 20px;
+}
+.horas {
+  margin-top: 20px;
+}
+.video p{
+  color: silver;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  margin-left: 10px; 
 }
